-New build process
git-svn-id: https://subversion.assembla.com/svn/mdss@4832 e0e46c49-be69-4f5a-ad62-21024a331aea

Former-commit-id: 7eaacf6107141a37f8b642ab2d4129eb49cb63c7 [formerly 2dd2d3f25350d698a78f4c0646734e506d77ab59]
Former-commit-id: 6dfb012627d12675de18233b30d8e65c772f6f76